--- a/blog.html
+++ b/blog.html
@@ -6,18 +6,18 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.f04f3089.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6c04d1c1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.cd1cb114.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ac709e5e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a8097bba.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.66b7968b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.777023d4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.2a76f831.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.0afc550f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.5f0dde4f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.2636ea7c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.5cd0574f.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/blog-page.svelte.faaa504d.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/blog-page.js.6757b6f0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page.a4b7980d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/blog-page.js.a73220ca.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page.094ac244.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -55,7 +55,7 @@
 			<script type="application/json" data-sveltekit-fetched data-url="/api/posts">{"status":200,"statusText":"","headers":{},"body":"[{\"meta\":{\"title\":\"Druhý příspěvek\",\"date\":\"2023-03-10\"},\"path\":\"/blog/2\"},{\"meta\":{\"title\":\"První post\",\"date\":\"2021-12-14\"},\"path\":\"/blog/1\"}]"}</script>
 			<script>
 				{
-					__sveltekit_1qqjr4g = {
+					__sveltekit_zs3no1 = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -64,10 +64,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6c04d1c1.js"),
-						import("./_app/immutable/entry/app.777023d4.js")
+						import("./_app/immutable/entry/start.cd1cb114.js"),
+						import("./_app/immutable/entry/app.5f0dde4f.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1qqjr4g.element, {
+						kit.start(app, __sveltekit_zs3no1.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
