--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.f04f3089.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6c04d1c1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.cd1cb114.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ac709e5e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a8097bba.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.66b7968b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.777023d4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.2a76f831.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.0afc550f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.5f0dde4f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.2636ea7c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.5cd0574f.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.85a5adb9.js">
@@ -45,7 +45,7 @@
 			
 			<script>
 				{
-					__sveltekit_1qqjr4g = {
+					__sveltekit_zs3no1 = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -54,10 +54,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6c04d1c1.js"),
-						import("./_app/immutable/entry/app.777023d4.js")
+						import("./_app/immutable/entry/start.cd1cb114.js"),
+						import("./_app/immutable/entry/app.5f0dde4f.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1qqjr4g.element, {
+						kit.start(app, __sveltekit_zs3no1.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
